// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`tool parameters JSON Schema (wire shape) apply_patch 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "patchText": {
      "description": "The full patch text that describes all changes to be made",
      "type": "string",
    },
  },
  "required": [
    "patchText",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) bash 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "command": {
      "description": "The command to execute",
      "type": "string",
    },
    "monitor": {
      "description": "Run in the background instead of inline: "once" for a long command, "poll" to repeat a read-only status command until a condition holds. See "Waiting for CI, deploys, background jobs and servers" above.",
      "properties": {
        "deadline_ms": {
          "exclusiveMinimum": 0,
          "maximum": 86400000,
          "type": "integer",
        },
        "failure_contains": {
          "minLength": 1,
          "type": "string",
        },
        "interval_ms": {
          "maximum": 3600000,
          "minimum": 1000,
          "type": "integer",
        },
        "mode": {
          "enum": [
            "once",
            "poll",
          ],
          "type": "string",
        },
        "success_contains": {
          "minLength": 1,
          "type": "string",
        },
        "wait_ms": {
          "maximum": 60000,
          "minimum": 0,
          "type": "integer",
        },
      },
      "required": [
        "mode",
      ],
      "type": "object",
    },
    "timeout": {
      "description": "Optional timeout in milliseconds",
      "exclusiveMinimum": 0,
      "maximum": 9007199254740991,
      "minimum": -9007199254740991,
      "type": "integer",
    },
    "workdir": {
      "description": "Existing directory to run the command in. Relative paths resolve from the fixed session directory, never from a previous call. Prefer a verified absolute path. Omit workdir to recover the session directory after a path error; do not repeat or extend the failed path.",
      "type": "string",
    },
  },
  "required": [
    "command",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) edit 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "filePath": {
      "description": "The absolute path to the file to modify",
      "type": "string",
    },
    "newString": {
      "description": "The text to replace it with (must be different from oldString)",
      "type": "string",
    },
    "oldString": {
      "description": "The text to replace",
      "type": "string",
    },
    "replaceAll": {
      "description": "Replace all occurrences of oldString (default false)",
      "type": "boolean",
    },
  },
  "required": [
    "filePath",
    "oldString",
    "newString",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) glob 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "path": {
      "description": "The directory to search in. If not specified, the current working directory will be used. IMPORTANT: Omit this field to use the default directory. DO NOT enter "undefined" or "null" - simply omit it for the default behavior. Must be a valid directory path if provided.",
      "type": "string",
    },
    "pattern": {
      "description": "The glob pattern to match files against",
      "type": "string",
    },
  },
  "required": [
    "pattern",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) grep 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "include": {
      "description": "File pattern to include in the search (e.g. "*.js", "*.{ts,tsx}")",
      "type": "string",
    },
    "path": {
      "description": "The directory to search in. Defaults to the current working directory.",
      "type": "string",
    },
    "pattern": {
      "description": "The regex pattern to search for in file contents",
      "type": "string",
    },
  },
  "required": [
    "pattern",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) invalid 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "error": {
      "type": "string",
    },
    "tool": {
      "type": "string",
    },
  },
  "required": [
    "tool",
    "error",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) lsp 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "character": {
      "description": "The character offset (1-based, as shown in editors)",
      "maximum": 9007199254740991,
      "minimum": 1,
      "type": "integer",
    },
    "filePath": {
      "description": "The absolute or relative path to the file",
      "type": "string",
    },
    "line": {
      "description": "The line number (1-based, as shown in editors)",
      "maximum": 9007199254740991,
      "minimum": 1,
      "type": "integer",
    },
    "operation": {
      "description": "The LSP operation to perform",
      "enum": [
        "goToDefinition",
        "findReferences",
        "hover",
        "documentSymbol",
        "workspaceSymbol",
        "goToImplementation",
        "prepareCallHierarchy",
        "incomingCalls",
        "outgoingCalls",
      ],
      "type": "string",
    },
    "query": {
      "description": "Search query for workspaceSymbol. Empty string requests all symbols.",
      "type": "string",
    },
  },
  "required": [
    "operation",
    "filePath",
    "line",
    "character",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) plan 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "tasks": {
      "items": {
        "properties": {
          "content": {
            "minLength": 1,
            "type": "string",
          },
          "criterion": {
            "minLength": 1,
            "type": "string",
          },
          "key": {
            "minLength": 1,
            "type": "string",
          },
          "quote": {
            "minLength": 1,
            "type": "string",
          },
        },
        "required": [
          "key",
          "content",
          "criterion",
          "quote",
        ],
        "type": "object",
      },
      "type": "array",
    },
  },
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) question 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "questions": {
      "description": "Questions to ask",
      "items": {
        "properties": {
          "header": {
            "description": "Very short label (max 30 chars)",
            "type": "string",
          },
          "multiple": {
            "description": "Allow selecting multiple choices",
            "type": "boolean",
          },
          "options": {
            "description": "Available choices",
            "items": {
              "properties": {
                "description": {
                  "description": "Explanation of choice",
                  "type": "string",
                },
                "label": {
                  "description": "Display text (1-5 words, concise)",
                  "type": "string",
                },
              },
              "required": [
                "label",
                "description",
              ],
              "type": "object",
            },
            "type": "array",
          },
          "question": {
            "description": "Complete question",
            "type": "string",
          },
        },
        "required": [
          "question",
          "header",
          "options",
        ],
        "type": "object",
      },
      "type": "array",
    },
  },
  "required": [
    "questions",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) read 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "filePath": {
      "description": "The absolute path to the file or directory to read",
      "type": "string",
    },
    "limit": {
      "description": "The maximum number of lines to read (defaults to 2000)",
      "maximum": 9007199254740991,
      "minimum": 0,
      "type": "integer",
    },
    "offset": {
      "description": "The line number to start reading from (1-indexed)",
      "maximum": 9007199254740991,
      "minimum": 0,
      "type": "integer",
    },
  },
  "required": [
    "filePath",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) skill 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "name": {
      "description": "The name of the skill from available_skills",
      "type": "string",
    },
  },
  "required": [
    "name",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) task 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "background": {
      "description": "Run the agent in the background. You will be notified when it completes. DO NOT sleep, poll, or proactively check on its progress",
      "type": "boolean",
    },
    "command": {
      "description": "The command that triggered this task",
      "type": "string",
    },
    "description": {
      "description": "A short (3-5 words) description of the task",
      "type": "string",
    },
    "prompt": {
      "description": "The task for the agent to perform",
      "type": "string",
    },
    "subagent_type": {
      "description": "The type of specialized agent to use for this task",
      "type": "string",
    },
    "task_id": {
      "description": "This should only be set if you mean to resume a previous task (you can pass a prior task_id and the task will continue the same subagent session as before instead of creating a fresh one)",
      "type": "string",
    },
  },
  "required": [
    "description",
    "prompt",
    "subagent_type",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) todo 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "todos": {
      "description": "The updated todo list",
      "items": {
        "properties": {
          "content": {
            "description": "Brief description of the task; required when creating, optional when updating by id",
            "minLength": 1,
            "type": "string",
          },
          "criterion": {
            "description": "Observable acceptance condition for this task",
            "type": "string",
          },
          "evidence": {
            "description": "Successful tool result proving completion, with an explanation. When omitted, only a verification result (successful bash or shell check, design_preview or design_export) newer than the last edit is selected",
            "properties": {
              "callID": {
                "type": "string",
              },
              "explanation": {
                "minLength": 1,
                "type": "string",
              },
              "messageID": {
                "type": "string",
              },
            },
            "required": [
              "callID",
              "explanation",
            ],
            "type": "object",
          },
          "id": {
            "type": "string",
          },
          "planKey": {
            "type": "string",
          },
          "priority": {
            "description": "Required when creating, optional when updating by id",
            "enum": [
              "high",
              "medium",
              "low",
            ],
            "type": "string",
          },
          "reason": {
            "type": "string",
          },
          "requirement": {
            "description": "Exact quote from the user request covered by this task",
            "type": "string",
          },
          "revision": {
            "exclusiveMinimum": 0,
            "maximum": 9007199254740991,
            "minimum": -9007199254740991,
            "type": "integer",
          },
          "scopeChange": {
            "properties": {
              "messageID": {
                "type": "string",
              },
              "quote": {
                "type": "string",
              },
            },
            "required": [
              "messageID",
              "quote",
            ],
            "type": "object",
          },
          "status": {
            "enum": [
              "pending",
              "in_progress",
              "blocked",
              "completed",
              "cancelled",
            ],
            "type": "string",
          },
        },
        "required": [
          "status",
        ],
        "type": "object",
      },
      "type": "array",
    },
  },
  "required": [
    "todos",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) webfetch 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "format": {
      "default": "markdown",
      "description": "The format to return the content in (text, markdown, or html). Defaults to markdown.",
      "enum": [
        "text",
        "markdown",
        "html",
      ],
      "type": "string",
    },
    "timeout": {
      "description": "Optional timeout in seconds (max 120)",
      "type": "number",
    },
    "url": {
      "description": "The URL to fetch content from",
      "type": "string",
    },
  },
  "required": [
    "url",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) websearch 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "contextMaxCharacters": {
      "description": "Maximum characters for context string optimized for LLMs (default: 10000)",
      "type": "number",
    },
    "livecrawl": {
      "description": "Live crawl mode - 'fallback': use live crawling as backup if cached content unavailable, 'preferred': prioritize live crawling (default: 'fallback')",
      "enum": [
        "fallback",
        "preferred",
      ],
      "type": "string",
    },
    "numResults": {
      "description": "Number of search results to return (default: 8)",
      "type": "number",
    },
    "query": {
      "description": "Websearch query",
      "type": "string",
    },
    "type": {
      "description": "Search type - 'auto': balanced search (default), 'fast': quick results, 'deep': comprehensive search",
      "enum": [
        "auto",
        "fast",
        "deep",
      ],
      "type": "string",
    },
  },
  "required": [
    "query",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) write 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "content": {
      "description": "The content to write to the file",
      "type": "string",
    },
    "filePath": {
      "description": "The absolute path to the file to write (must be absolute, not relative)",
      "type": "string",
    },
  },
  "required": [
    "content",
    "filePath",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) design_document 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "action": {
      "enum": [
        "list",
        "create",
        "update",
        "reopen",
        "refresh",
        "detect",
      ],
      "type": "string",
    },
    "id": {
      "description": "Required for update, reopen and refresh.",
      "pattern": "^design_[a-zA-Z0-9_-]+$",
      "type": "string",
    },
    "input": {
      "description": "Required for create and update. Create requires name, journey, engine and kind.",
      "properties": {
        "application": {
          "type": "string",
        },
        "brief": {
          "properties": {
            "audience": {
              "type": "string",
            },
            "constraints": {
              "type": "string",
            },
            "content": {
              "type": "string",
            },
            "objective": {
              "type": "string",
            },
            "references": {
              "items": {
                "type": "string",
              },
              "type": "array",
            },
          },
          "required": [
            "objective",
            "audience",
            "content",
            "constraints",
            "references",
          ],
          "type": "object",
        },
        "controls": {
          "items": {
            "properties": {
              "fields": {
                "items": {
                  "anyOf": [
                    {
                      "properties": {
                        "default": {
                          "type": "string",
                        },
                        "id": {
                          "pattern": "^[a-zA-Z][a-zA-Z0-9_-]{0,63}$",
                          "type": "string",
                        },
                        "name": {
                          "minLength": 1,
                          "type": "string",
                        },
                        "type": {
                          "enum": [
                            "text",
                          ],
                          "type": "string",
                        },
                      },
                      "required": [
                        "id",
                        "name",
                        "type",
                        "default",
                      ],
                      "type": "object",
                    },
                    {
                      "properties": {
                        "default": {
                          "type": "boolean",
                        },
                        "id": {
                          "pattern": "^[a-zA-Z][a-zA-Z0-9_-]{0,63}$",
                          "type": "string",
                        },
                        "name": {
                          "minLength": 1,
                          "type": "string",
                        },
                        "type": {
                          "enum": [
                            "boolean",
                          ],
                          "type": "string",
                        },
                      },
                      "required": [
                        "id",
                        "name",
                        "type",
                        "default",
                      ],
                      "type": "object",
                    },
                    {
                      "properties": {
                        "default": {
                          "type": "number",
                        },
                        "id": {
                          "pattern": "^[a-zA-Z][a-zA-Z0-9_-]{0,63}$",
                          "type": "string",
                        },
                        "max": {
                          "type": "number",
                        },
                        "min": {
                          "type": "number",
                        },
                        "name": {
                          "minLength": 1,
                          "type": "string",
                        },
                        "type": {
                          "enum": [
                            "number",
                          ],
                          "type": "string",
                        },
                      },
                      "required": [
                        "id",
                        "name",
                        "type",
                        "default",
                      ],
                      "type": "object",
                    },
                    {
                      "properties": {
                        "default": {
                          "type": "string",
                        },
                        "id": {
                          "pattern": "^[a-zA-Z][a-zA-Z0-9_-]{0,63}$",
                          "type": "string",
                        },
                        "name": {
                          "minLength": 1,
                          "type": "string",
                        },
                        "options": {
                          "items": {
                            "type": "string",
                          },
                          "type": "array",
                        },
                        "type": {
                          "enum": [
                            "select",
                          ],
                          "type": "string",
                        },
                      },
                      "required": [
                        "id",
                        "name",
                        "type",
                        "default",
                        "options",
                      ],
                      "type": "object",
                    },
                  ],
                },
                "maxItems": 32,
                "type": "array",
              },
              "id": {
                "pattern": "^[a-zA-Z][a-zA-Z0-9_-]{0,63}$",
                "type": "string",
              },
              "name": {
                "minLength": 1,
                "type": "string",
              },
              "selector": {
                "minLength": 1,
                "type": "string",
              },
              "variant": {
                "type": "string",
              },
            },
            "required": [
              "id",
              "name",
              "selector",
              "fields",
            ],
            "type": "object",
          },
          "maxItems": 32,
          "type": "array",
        },
        "decisions": {
          "items": {
            "properties": {
              "feedback": {
                "type": "string",
              },
              "id": {
                "type": "string",
              },
              "revision": {
                "type": "string",
              },
              "text": {
                "type": "string",
              },
            },
            "required": [
              "id",
              "text",
            ],
            "type": "object",
          },
          "type": "array",
        },
        "designSystem": {
          "type": "string",
        },
        "engine": {
          "enum": [
            "html",
            "react",
            "solid",
          ],
          "type": "string",
        },
        "entry": {
          "type": "string",
        },
        "journey": {
          "enum": [
            "new",
            "existing",
          ],
          "type": "string",
        },
        "kind": {
          "enum": [
            "screen",
            "flow",
            "comparison",
            "deck",
          ],
          "type": "string",
        },
        "name": {
          "minLength": 1,
          "type": "string",
        },
        "presets": {
          "items": {
            "properties": {
              "id": {
                "pattern": "^[a-zA-Z][a-zA-Z0-9_-]{0,63}$",
                "type": "string",
              },
              "name": {
                "minLength": 1,
                "type": "string",
              },
              "values": {
                "additionalProperties": {
                  "additionalProperties": {
                    "anyOf": [
                      {
                        "type": "string",
                      },
                      {
                        "type": "number",
                      },
                      {
                        "type": "boolean",
                      },
                    ],
                  },
                  "type": "object",
                },
                "type": "object",
              },
              "variant": {
                "type": "string",
              },
            },
            "required": [
              "id",
              "name",
              "values",
            ],
            "type": "object",
          },
          "maxItems": 100,
          "type": "array",
        },
        "questions": {
          "items": {
            "type": "string",
          },
          "type": "array",
        },
        "scenarios": {
          "items": {
            "properties": {
              "actions": {
                "items": {
                  "properties": {
                    "action": {
                      "enum": [
                        "click",
                        "fill",
                        "press",
                      ],
                      "type": "string",
                    },
                    "selector": {
                      "type": "string",
                    },
                    "value": {
                      "type": "string",
                    },
                  },
                  "required": [
                    "selector",
                    "action",
                  ],
                  "type": "object",
                },
                "type": "array",
              },
              "id": {
                "type": "string",
              },
              "name": {
                "type": "string",
              },
              "notApplicable": {
                "type": "string",
              },
              "params": {
                "additionalProperties": {
                  "additionalProperties": {
                    "anyOf": [
                      {
                        "type": "string",
                      },
                      {
                        "type": "number",
                      },
                      {
                        "type": "boolean",
                      },
                    ],
                  },
                  "type": "object",
                },
                "type": "object",
              },
              "selector": {
                "type": "string",
              },
              "state": {
                "enum": [
                  "loading",
                  "empty",
                  "error",
                  "populated",
                  "edge",
                ],
                "type": "string",
              },
              "variant": {
                "type": "string",
              },
            },
            "required": [
              "id",
              "name",
              "selector",
              "state",
              "actions",
            ],
            "type": "object",
          },
          "type": "array",
        },
        "tweaks": {
          "patternProperties": {
            "^--[a-zA-Z][a-zA-Z0-9-]*$": {
              "pattern": "^[^;{}<>]*$",
              "type": "string",
            },
          },
          "type": "object",
        },
      },
      "type": "object",
    },
  },
  "required": [
    "action",
  ],
  "type": "object",
}
`;
